--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -46,7 +46,7 @@ The pore volume is calculated by random sampling of the accessible and inaccessi
 
 In most of the studies in this thesis, I will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
 
-In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows the ranking of the different forces according to their strength; moreover, the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, it is possible to consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $U\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
+In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole interactions ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the van der Waals interactions ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows the ranking of the different forces according to their strength; moreover, the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\autocite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\autocite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\autocite{london1930theorie,polanyi1932section} To quantify these interactions, it is possible to consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $U\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
 \begin{equation}\label{eq:keesom}
   U\e{K} = -\dfrac{\mu_1^2\mu_2^2}{{(4\pi\epsilon_0\epsilon_r)}^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
 \end{equation}
