--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -252,14 +252,24 @@ These two studies show clearly the failure of current screening methodologies to
 
 The physical reason behind considering the polarization effect for xenon/krypton separation is to exploit the difference of polarizability between Xe (\SI{4.0}{\cubic\angstrom}) and Kr (\SI{2.5}{\cubic\angstrom})\autocite{Olney1997} at its full potential. And in a broader perspective, the order of magnitude of the induction energy is actually higher than other standard van der Waals energies as explained in the section~\ref{sct:interaction}. For instance, the ion--induced dipole interaction is said to be of the order of 40-600~\si{\kJ\per\mol}. In the case of ZJU-74a-Ni, the Ni\ex{2+}--Xe--Ni\ex{2+} interaction at the origin of selectivity is precisely this type of interaction, which mostly explains the experimental values of selectivity. The incorporation of polarization in the screening procedure could completely change the type of structures obtained and the type of the interactions at play.
 
-With this Becker et al. carried out an interesting study on a series of MOF materials with a high density of open-metal sites, the M-MOF-74 with M = Co, Cr, Cu, Fe, Mg, Mn, Ni, Ti, V, and Zn.\autocite{Becker_2017} The authors found that by adding a potential induced by the surrounding partial charges to a modified LJ potential, they could reproduce the \ce{CO2} and \ce{CH4} experimental isotherm data for this series of MOFs. They also show that the standard UFF forcefield does no describe the adsorption behavior of \ce{CO2} on the open-metal sites, hence missing out on a strong adsorption site at infinite dilution. 
+With this in mind, Becker et al. carried out an interesting study on a series of MOF materials with a high density of open-metal sites, the M-MOF-74 with M = Co, Cr, Cu, Fe, Mg, Mn, Ni, Ti, V, and Zn.\autocite{Becker_2017} The authors found that by adding a potential induced by the surrounding partial charges to a modified LJ potential, they could reproduce the \ce{CO2} and \ce{CH4} experimental isotherm data for this series of MOFs. They also showed that the standard UFF forcefield does no describe the adsorption behavior of \ce{CO2} on the open-metal sites, hence missing out on a strong adsorption site at infinite dilution. 
 
+This new method is based on the procedure developed by Lachet et al.\autocite{Lachet_1998}. This procedure is based on the induced dipole method where the induction energy $U\e{ind}$ is expressed as follows:
 
+\begin{equation}
+  U\e{ind} = -\frac{1}{2} \sum_{i=1}^{N} \boldsymbol{\mu}_i \cdot \mathbf{E}_i^0
+\end{equation}
+where $\boldsymbol{\mu}_i$ is the induced dipole, and $\mathbf{E}_i^0$ is the electric field created by the surrounding atoms' partial charges on the particle $i$. Since the induced dipole also interacts with the surrounding induced dipoles $j\neq i$, the induced dipole is usually calculated using a back-propagation algorithm as described in the Ref.~\cite{Lachet_1998}. However, back-propagation was found to only account for less than {5\%} of the total induction energy. For this reason the equation can be simplified to the simple interaction between the induced dipole and the surrounding electric field without taking into account the induced-dipole--induced-dipole interactions. Moreover, by skipping the bacpropagation step, we can save valuable computation time in a screening. The induction energy can then be simply expressed as follows:
 
-Inspired by works on the subject\autocite{Lachet_1998,Becker_2017} 
+\begin{equation}
+  U\e{ind} = -\frac{1}{2} \sum_{i=1}^{N} \alpha_i {\left\lvert\mathbf{E}_i^0\right\rvert}^2
+\end{equation}
 
-\todo{essayer d'ajouter la polarisabilité pour PEI et al. et Li et al.}
+Since a part of the induction energy is already contained in the Lennard-Jones potential, the authors rescaled the LJ parameters to remove the induction part from the LJ energy. This part seems to be system-dependent and could in fact be questionable since we can use it to fit to experimental data without solid theoretical reasons to back it. To do it preperly, one should design a forcefield around this concept in order to tweak the LJ-parameters according to a given experimental data as it is usually done in any forcefield development. 
 
+If we manage to adapt this method to the xenon/krypton separation case, it could be possible to carry out screenings that find materials comparable to ZJU-74a-Pd. To further optimize the screening approach, we could also find materials with a certain pore size and that contain open metal sites within a database, and then evaluate this restricted list using higher-level methods. 
+
+\todo{Estimate the induction energy for ZJU and squarate}
 
 
 \OnlyInSubfile{\printglobalbibliography}
