--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -250,7 +250,7 @@ These two studies show clearly the failure of current screening methodologies to
 
 \subsection{Studying the polarization}
 
-The physical reason behind considering the polarization effect for xenon/krypton separation is to exploit the difference of polarizability between Xe (\SI{4.0}{\cubic\angstrom}) and Kr (\SI{2.5}{\cubic\angstrom})\autocite{Olney1997} at its full potential. And in a broader perspective, the order of magnitude of the induction energy is actually higher than other standard van der Waals energies as explained in the section~\ref{sct:interaction}. For instance, the ion--induced dipole interaction is said to be of the order of 40-600~\si{\kJ\per\mol}. In the case of ZJU-74a-Ni, the Ni\ex{2+}--Xe--Ni\ex{2+} interaction at the origin of selectivity is precisely this type of interaction, which mostly explains the experimental values of selectivity. The incorporation of polarization in the screening procedure could completely change the type of structures obtained and the type of the interactions at play.
+The physical reason behind considering the polarization effect for xenon/krypton separation is to exploit the difference of polarizability between Xe (\SI{4.0}{\cubic\angstrom}) and Kr (\SI{2.5}{\cubic\angstrom})\autocite{Olney1997} at its full potential. And in a broader perspective, the order of magnitude of the induction energy is actually higher than other standard van der Waals energies as explained in the section~\ref{sct:interaction}. For instance, the ion--induced dipole interaction is said to be of the order of 40-600~\si{\kJ\per\mol}. In the case of ZJU-74a-Ni, the Ni\ex{2+}---Xe---Ni\ex{2+} interaction at the origin of selectivity is precisely this type of interaction, which mostly explains the experimental values of selectivity. The incorporation of polarization in the screening procedure could completely change the type of structures obtained and the type of the interactions at play.
 
 With this in mind, Becker et al. carried out an interesting study on a series of MOF materials with a high density of open-metal sites, the M-MOF-74 with M = Co, Cr, Cu, Fe, Mg, Mn, Ni, Ti, V, and Zn.\autocite{Becker_2017} The authors found that by adding a potential induced by the surrounding partial charges to a modified LJ potential, they could reproduce the \ce{CO2} and \ce{CH4} experimental isotherm data for this series of MOFs. They also showed that the standard UFF forcefield does no describe the adsorption behavior of \ce{CO2} on the open-metal sites, hence missing out on a strong adsorption site at infinite dilution. 
 
